# find-free-gpu

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
tests/: __init__.py  test_main.py
